--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,6 @@ body {
   padding: 0;
   background: var(--body-color);
   font-family: var(--primary-font);
-  /* font-weight: 400; */
   font-size: var(--text-size);
   line-height: 1.6;
 }
@@ -414,9 +413,10 @@ svg{
 }
 
 .project-list__item:last-child {
-  grid-column: 2 / 4;
-  grid-row: 4 / 4;
+  grid-column: 1 / 3;
+  grid-row: 5 / 5;
   font-size: 1.1em;
+height: 400px;
 }
 
 .project-list__item:last-child a{
@@ -439,7 +439,7 @@ input{
 }
 
 #contact-form{
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 #contact-email,
@@ -545,7 +545,7 @@ footer {
   }
 
   .project-list__item:last-child {
-    grid-column: auto / auto;
+    grid-column: 1 / 3;
     grid-row: auto / auto;
   }
 
@@ -621,6 +621,10 @@ footer {
 
   .contact-container{
     margin: 30px 10%;
+  }
+
+  #contact-form{
+    margin-top: 40px;
   }
 
   #contact-mes{
