--- a/css/styles.css
+++ b/css/styles.css
@@ -413,10 +413,10 @@ svg{
 }
 
 .project-list__item:last-child {
-  grid-column: 1 / 3;
-  grid-row: 5 / 5;
+  grid-column: 2 / 4;
+  grid-row: 4 / 5;
   font-size: 1.1em;
-height: 400px;
+  height: 100%;
 }
 
 .project-list__item:last-child a{
