--- a/css/styles.css
+++ b/css/styles.css
@@ -504,8 +504,13 @@ footer {
   clear: both;
   text-align: center;
   width: 100%;
-  padding-top: 200px;
+  padding-top: 180px;
   padding-bottom: 20px;
+}
+
+.social-img{
+  height: 55px;
+  margin: 0 3px;
 }
 
 /* /////////////// */
@@ -664,6 +669,10 @@ footer {
   }
 
   footer {
-    padding-top: 20px;
+    padding: 60px 0 7px 0
+  }
+
+  .social-img{
+    height: 35px;
   }
 }
