--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,8 @@
   --body-color: #f8fafa;
   --body-color-darken: #f5f5f5;
   --primary-color: #000080;
-  --primary-color-lighten: #0000CD;
-  --secondary-color: #0000FF;
-  --tertiary-color: #9c9c9c;
-  --tertiary-color-lighten: #dfdfdf;
+  --primary-color-lighten: #0000CC;
+  --grey: #9c9c9c;
   --shadow: 1px 3px 5px 0px rgba(0,0,0,0.3);
   --shadow-darken : 3px 5px 7px 0px rgba(0,0,0,0.3);
 
@@ -57,6 +55,7 @@ a {
 
 p {
   font-family: var(--primary-font);
+  margin: 0 auto;
 }
 
 a:hover, a:focus {
@@ -99,9 +98,26 @@ button:focus {
   box-shadow: var(--shadow);
 }
 
+input{
+  line-height: 1.4;
+  padding: 3px;
+  border: var(--grey) solid .7px;
+}
+
+::-webkit-input-placeholder { /* Edge */
+  font-size: 10px;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  font-size: 10px;
+}
+
+::placeholder {
+  font-size: 10px;
+}
 .img[alt]{
   display: inline-block;
-  color: var(--tertiary-color);
+  color: var(--grey);
   font-weight: 100;
   font-size: var(--secondary-text-size);
   font-family: var(--alt-font);
@@ -111,12 +127,12 @@ button:focus {
 .work-container__header,
 .contact-container__header{
   text-align: center;
-  margin: 80px 0
+  margin: 80px 0 60px 0
 }
 
 .legend{
   font-size: 10px;
-  color: var(--tertiary-color);
+  color: var(--grey);
 }
 
 /* //////// */
@@ -187,7 +203,7 @@ a .namelogo-name {
   display: none;
   font-size: 14px;
   padding: 7px 20px;
-  margin: 27px 0 2px 15px;
+  margin: 27px 32px 3px 0;
 }
 
 .dropdown-menu-list {
@@ -257,7 +273,7 @@ a .namelogo-name {
 
 .about-container__item{
   list-style-type: circle;
-  margin: 10px auto;
+  margin: 5px auto;
 }
 
 .strong{
@@ -294,14 +310,14 @@ tr :last-child{
 }
 
 .tech-icon{
-  width: 100%;
-  margin: 60px auto;
+  width: 90%;
+  margin: 30px auto;
   border-radius: 30px;
 }
 
 .tech-icon__img {
-  width: 92px;
-  height: 92px;
+  width: 80px;
+  height: 80px;
   margin: 8px;
   border-radius: 50%;
   backface-visibility: hidden;
@@ -365,7 +381,7 @@ svg{
 
 .SVGlegend{
   padding-top: 1px;
-  color: var(--tertiary-color);
+  color: var(--grey);
   text-decoration: none;
   margin: 0 21%;
   font-size: 9px;
@@ -433,11 +449,7 @@ svg{
   text-align: center;
 }
 
-input{
-  line-height: 1.4;
-  padding: 3px;
-  border: var(--tertiary-color) solid .7px;
-}
+
 
 #contact-form{
   margin-top: 80px;
@@ -453,7 +465,7 @@ input{
   height: 200px;
   padding: 10px 4px;
   min-height: 60px;
-  border: var(--tertiary-color)  solid .7px;
+  border: var(--grey)  solid .7px;
 }
 
 .messageSent{
@@ -484,17 +496,7 @@ input{
   outline: none !important;
 }
 
-::-webkit-input-placeholder { /* Edge */
-  font-size: 10px;
-}
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-  font-size: 10px;
-}
-
-::placeholder {
-  font-size: 10px;
-}
 
 /* //////// */
 /*  footer  */
@@ -555,7 +557,13 @@ footer {
   }
 
   .tech-icon{
-    margin: 40px auto;
+    margin: 20px auto;
+  }
+
+  .tech-icon__img {
+    width: 50px;
+    height: 50px;
+    margin: 4px;
   }
 
   .tech-icon__item:hover
